# clible-v2

./: .cursorrules  .env.example  .envrc  .gitignore  AGENTS.md  PLAN.md  SKILLS.md  main.py  pyproject.toml
.github/workflows/: ci.yml
reflections/: 02-15-2026-sun.md  _template.md
src/clible/: config.py
src/clible/db/: connection.py  migrations.py  seed_books.py
src/clible/db/migrations/: 001_initial_schema.sql  002_seed_architecture.sql
tests/: test_config.py
tests/test_db/: test_get_connection.py  test_run_migrations.py
tests/test_db/migrations/: 001_minimal.sql
