[project]
name = "clible-v2"
version = "0.1.0"
description = "Bible Study tool in CLI with users, sessions, text analytic experiments, export to different file types and basic read, diff, ref properties."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylance>=2.0.1",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
# addopts = "--cov=clible"  # Re-enable when pytest-cov is added (e.g. Ticket 0.3)
testpaths = ["tests"]
pythonpath = ["src"]

# Dependencies will be added per PLAN.md tickets.
# Runtime: click, rich, requests
# Dev/test: pytest, pytest-mock, pytest-cov, ruff
# See Ticket 0.1 for setup.

[tool.ruff]
# Configure Ruff for code style and linting that matches project conventions.
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "D",  # (Temporarily ignore docstring checks; re-enable if required per plan)
]


